--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -397,6 +397,7 @@ $grid-gutter-width: $fau-gutter-width;
 
 
 $searchbackdrop-offset-top: 195px;
+$scroll-target-offset: 190px;
 
 $subnav-width-sm: 260px;
 $subnav-width-md: 275px;
