--- a/src/sass/structure/content/_global.scss
+++ b/src/sass/structure/content/_global.scss
@@ -8,6 +8,23 @@
 	position: relative;
     }
     main {
+	
+
+	:target {
+	     scroll-margin-top: var(--js-fixed-header-height, $scroll-target-offset);  
+	     padding-top: 1rem;
+	     
+	     .admin-bar & {	 
+		 padding-top: $wordpress-adminbar-bigheight;
+		 @media (min-width: $wordpress-adminbar-break) {
+		      padding-top: $wordpress-adminbar-smallheight;
+		 }
+	     }
+	}
+	
+
+
+	
 	@include px2rem($font-size-base);
 	color: var(--color-Text);
 	font-family: $fontStack;
