--- a/src/sass/elements/_images.scss
+++ b/src/sass/elements/_images.scss
@@ -119,20 +119,30 @@ main, aside, .portalpage-sidebar, .widget {
 	&.alignright,
 	&.alignnone,
 	&.aligncenter {
-	    margin-left: $fau-gutter-halfwidth;
-	    margin-right: $fau-gutter-halfwidth;
+	   
 	    width: 100vw;
 	    max-width: 100vw;
-	    
+	    margin-left: -$fau-gutter-halfwidth;
+	    margin-right: -$fau-gutter-halfwidth;
+		
+		
 	    @media (min-width: $screen-xs) {
-		 width: auto;
-		 max-width: 100%;
-		 margin: 1rem;
+		margin-left: 0;
+		margin-right: 0;
+		width: auto;
+		max-width: 100%;
+		margin-top: 1rem;
+		margin-bottom: 1rem;
 	    }
+	    @media (min-width: $screen-sm) {
+		margin-left: $fau-gutter-halfwidth;
+		margin-right: $fau-gutter-halfwidth;
+	     }
 	    img {
 		width: 100vw;
 		max-width: 100vw;
 		@media (min-width: $screen-xs) {
+		    width: inherit;
 		    max-width: 100%;
 		}
 	    }
