--- a/style.css
+++ b/style.css
@@ -12522,33 +12522,21 @@ ul.assistant-tabs-nav li:last-child {
   height: auto;
   margin: 0;
   padding: 0;
-}
-.post-image figure a {
-  box-shadow: none;
-  transition: initial;
-  padding: 0;
-  text-decoration: underline;
-  color: currentcolor;
-  -webkit-text-decoration-color: currentcolor;
-          text-decoration-color: currentcolor;
-}
-.post-image figure a:hover, .post-image figure a:focus {
-  box-shadow: none;
-  text-decoration: underline;
-  color: currentcolor;
-  -webkit-text-decoration-color: currentcolor;
-          text-decoration-color: currentcolor;
-}
-.post-image figure a img {
+  /*
+        a {
+            @include defaultlinkstyle;
+
+            img {
   border: none;
-}
-@media (min-width: 480px) {
-  .post-image figure a img {
-    border: 1px solid transparent;
+  @media (min-width: $screen-xs) {
+      border: 1px solid transparent;
+
+      &:hover, &:focus {
+  	 border: 1px solid var(--color-content-links);
+      }
   }
-  .post-image figure a img:hover, .post-image figure a img:focus {
-    border: 1px solid var(--color-content-links);
-  }
+            }
+        } */
 }
 .post-image .post-image-caption {
   font-size: 0.875rem;
