--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -29,7 +29,9 @@ $colormap-misc: ("Text": #222,
 		 "Negative": #a71c18,
 		 "Negative-Kontrast": #fff,		 
 		 "Positive": #00905a,
-		 "Positive-Kontrast": #fff,		 
+		 "Positive-Kontrast": #fff,	
+		 "Neutral": #f0ad4e,
+		 "Neutral-Kontrast": #000,
 		 );
 
  
